# TechCheckPro

./: .gitignore  .vercelignore  README.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
backend/: .env  Dockerfile  Dockerfile.prod  build.py  manage.py  pyproject.toml  requirements.txt
backend/core/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py  views_admin.py
backend/core/data/: factors.csv
backend/core/management/commands/: create_admin.py  create_evaluador.py  seed_toe.py
backend/core/migrations/: 0001_initial.py  0002_rf_completitud_auditoria.py
backend/core/templates/: reporte_dictamen.html
backend/core/utils/: audit.py  completitud.py  guiosad_calculos.py  guiosad_engine.py  pdf_report.py
backend/techcheck/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminCatalog.jsx  AdminUsers.jsx  Compare.jsx  Dashboard.jsx  Evaluation.jsx  ExecutiveDashboard.jsx  Login.jsx  Report.jsx  WhatIf.jsx
frontend/src/services/: api.js
frontend/src/utils/: evaluacionCompletitud.js  guiosadCalculos.js
